--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataset Bussines</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="
+https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js
+"></script>
 </head>
 <body>
     <div class="container">
@@ -61,6 +64,19 @@
             </div>
         </section>
     </div>
+    <div>
+        <canvas id="grafica1" width="400" height="300"> </canvas>
+    </div>
+    <div>
+        <canvas id="grafica2" width="400" height="300"> </canvas>
+    </div>
+    <div>
+        <canvas id="grafica3" width="400" height="300"> </canvas>
+    </div>
+    <div>
+        <canvas id="grafica4" width="400" height="300"> </canvas>
+    </div>
 </body>
+
 <script type="module" src="/src/controllers/scripts.mjs"></script>
 </html>
